--- a/preprocess.html
+++ b/preprocess.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Erik Grützner">
 <meta name="author" content="Luca Schnatz">
 
-<title>EWA-BA6</title>
+<title>EW-BA6</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3091,7 +3091,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">EWA-BA6</h1>
+<h1 class="title">EW-BA6</h1>
 <p class="subtitle lead">Datenaufbereitung</p>
 </div>
 
